--- a/product.html
+++ b/product.html
@@ -51,7 +51,7 @@
 						</ul>
 						<ul class="navbar-nav ml-md-auto hidden-on-sm">
 							<li class="nav-item">
-								<a role="button" href="#getstarted" class="btn btn-primary-1 btn-md">
+								<a role="button" href="index.html#getstarted" class="btn btn-primary-1 btn-md">
 										Get Started
 								</a>
 							</li>
@@ -91,7 +91,7 @@
 						<li class="tariff__item tariff__item--x">Validation</li>
 					</ul>
 					<div class="tariff__button-wrapp">
-						<a href="#" class="tariff__button">Get Started</a>
+						<a href="index.html#getstarted" class="tariff__button">Get Started</a>
 					</div>
 				</div>
 				<div class="tariff tariffs__item">
@@ -109,7 +109,7 @@
 						<li class="tariff__item tariff__item--ok">Validation</li>
 					</ul>
 					<div class="tariff__button-wrapp">
-						<a href="#" class="tariff__button">Get Started</a>
+						<a href="index.html#getstarted" class="tariff__button">Get Started</a>
 					</div>
 				</div>
 				<div class="tariff tariffs__item">
@@ -123,7 +123,7 @@
 						<li class="tariff__item tariff__item--ok">Matchmaking</li>
 					</ul>
 					<div class="tariff__button-wrapp">
-						<a href="#" class="tariff__button">Get Started</a>
+						<a href="index.html#getstarted" class="tariff__button">Get Started</a>
 					</div>
 				</div>
 			</div>
@@ -308,7 +308,7 @@
 			</div>
 
 			<div class="w-100 text-center pt-5">
-				<a role="button" href="#getstarted" class="btn btn-primary-inv btn-md btn-48 btn-200">
+				<a role="button" href="index.html#getstarted" class="btn btn-primary-inv btn-md btn-48 btn-200">
 						Get Started
 				</a>	
 			</div>	
