--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 						</ul>
 						<ul class="navbar-nav ml-md-auto hidden-on-sm">
 							<li class="nav-item">
-								<a role="button" href="#getstarted" class="btn btn-primary-1 btn-md">
+								<a role="button" href="index.html#getstarted" class="btn btn-primary-1 btn-md">
 										Get Started
 								</a>
 							</li>
