--- a/capitalequity.html
+++ b/capitalequity.html
@@ -49,7 +49,7 @@
 						</ul>
 						<ul class="navbar-nav ml-md-auto hidden-on-sm">
 							<li class="nav-item">
-								<a role="button" href="#getstarted" class="btn btn-primary-1 btn-md">
+								<a role="button" href="index.html#getstarted" class="btn btn-primary-1 btn-md">
 										Get Started
 								</a>
 							</li>
@@ -111,7 +111,7 @@
 							<img src="./img/1@2x.png" alt="" class="capitalequity-sponsors__img">
 						</div>
 					</div>
-					<button class="capitalequity-content__button">Get started</button>
+					<a href="index.html#getstarted" class="capitalequity-content__button">Get started</a>
 				</div>
 			</div>
 		</div>
